Bug 105081 - Dropdown lists for Margins and Spacing in the Page section of Sidebar need to be separate for proper translation
Summary: Dropdown lists for Margins and Spacing in the Page section of Sidebar need to...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-Page 83830
  Show dependency treegraph
 
Reported: 2017-01-03 21:59 UTC by Modestas Rimkus
Modified: 2021-10-03 02:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Modestas Rimkus 2017-01-03 21:59:51 UTC
Description:
There are "Margins" and "Spacing" dropdowns in the "Page" section of the Sidebar, Header and Footer subsections. The dropdowns use the same list of sizes, which might be ok in English, but makes it difficult to translate into some other languages.

In Lithuanian, and I believe in more languages, "margins" and "spacing" are words of different genders. Size names that come next to them must also be in corresponding (different) forms. This is now impossible to achieve as the same resource strings are used in both lists.

Even if dropdown content is the same, size names for Margins and Spacing should use different batches of strings so that the same English name can be translated differently.

Steps to Reproduce:
1. Start Writer
2. Open the Sidebar
3. Open the Page section in the Sidebar
4. Expand Header and Footer subsections

Actual Results:  
Margins and Spacing dropdowns for Header and Footer use the same lists of size names. This is obvious with the KeyID build.

Expected Results:
Different lists should be used for Margins and Spacing, so the same names can be translated differently.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 Safari/537.36
Comment 1 Yousuf Philips (jay) (retired) 2017-01-12 10:40:19 UTC
The drop down contains value presets with labels, so i dont believe there is anything that needs to be done, which is why they were merged into single entries to reduce translation work.
Comment 2 sophie 2017-03-16 18:00:20 UTC
Also confirmed in French, gender is wrong for Margin, which gives a poor quality of the translation... Sophie
Comment 3 Yousuf Philips (jay) (retired) 2017-03-26 20:24:26 UTC
This change i believe was made here

https://gerrit.libreoffice.org/#/c/28104/
https://cgit.freedesktop.org/libreoffice/core/commit/?id=6f437466f96868cb10187c404ed84fb6d3dcc645

so all that would be needed is for a dev to confirm that reverting it is okay.
Comment 4 Modestas Rimkus 2018-01-20 21:01:54 UTC
This seems to be a long forgotten issue that still prevents proper translation of the strings in question. Merging the strings was not a good idea in terms of localization, as these strings have to be translated differently for different objects - margins and spacing. If this can be fixed by reverting the change mentioned above, could this be done?
Comment 5 Xisco Faulí 2018-01-23 08:26:54 UTC
(In reply to Yousuf Philips (jay) from comment #3)
> This change i believe was made here
> 
> https://gerrit.libreoffice.org/#/c/28104/
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=6f437466f96868cb10187c404ed84fb6d3dcc645
> 
> so all that would be needed is for a dev to confirm that reverting it is
> okay.

Maybe it's too late to revert it.

@Bubli, is there anything else we could do here?
Comment 6 Xisco Faulí 2018-10-31 12:47:30 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6f437466f96868cb10187c404ed84fb6d3dcc645

author	Susobhan Ghosh <susobhang70@gmail.com>	2016-08-13 19:23:54 +0530
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2016-08-25 08:37:10 +0000
commit 6f437466f96868cb10187c404ed84fb6d3dcc645 (patch)
tree dfa3a0863f0f7c23556d4ef079054133938cc3ba
parent 79f1315a02b1dd4dd7b4a78dea410c3192663522 (diff)
tdf#83830: Use SpacingListBox in Header/Footer and Sidebar Wrap Panel

Bisected with: bibisect-linux-64-5.3

Adding Cc: to Susobhan Ghosh
Comment 7 Caolán McNamara 2018-10-31 14:54:25 UTC
This is fixable
Comment 8 Commit Notification 2018-11-01 13:38:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6d9a2557a0f0366fff169f3c3581414b3cec80bd%5E%21

Resolves: tdf#105081 and tdf#113420

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-11-02 18:22:06 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 5929d8ea469a971aa77371ed4b841c90a36e7da5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, thanks for fixing this!!