Resolves: tdf#105081 and tdf#113420

separate translations for Spacing: vs Margins:
separate translations for Inch vs cm

Change-Id: I9a2d8fe3ad0edde5afefe00258f1309f898130e8